<resources>
    <string name="app_name">UTS: Student Journal Planner</string>

    <!--Image Descriptions-->
    <string name="home_description">Navigate to Home</string>
    <string name="search_description">Navigate to Browse</string>
    <string name="add_description">Navigate to Add</string>
    <string name="journal_description">Navigate to My Journal</string>
    <string name="event_image_description">Event Image</string>
    <string name="assignment_image_description">Assignment Image</string>

    <!--Homepage Tabs-->
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_assignments">Upcoming Assignments</string>

    <!--Detail Titles-->
    <string name="name_title">Assignment Name</string>
    <string name="date_title">Date</string>
    <string name="desc_title">Description</string>
    <string name="subject_title">Subject</string>
    <string name="event_title">Event Name</string>
    <string name="location_title">Location</string>
    <string name="time_title">Time</string>

    <!--Field Hints-->
    <string name="name_field">Name</string>
    <string name="date_field">Date (DD/MM/YYYY)</string>
    <string name="desc_field">Description</string>
    <string name="due_date_field">Due Date (DD/MM/YYY)</string>
    <string name="location_field">Location</string>
    <string name="password_field">Password</string>
    <string name="student_id_field">Student ID</string>
    <string name="subject_field">Subject</string>
    <string name="time_field">Time (HH:MM)</string>

    <!--Buttons-->
    <string name="add_assignment_btn">Add Assignment</string>
    <string name="add_event_btn">Add Event</string>
    <string name="create_event_btn">Create Event</string>
    <string name="delete_btn">Delete</string>
    <string name="login_btn">Login</string>
    <string name="view_details_btn">View Details</string>

    <!--My Journal Tabs-->
    <string name="assignment_history_tab">Assignments History</string>
    <string name="assignment_tab">View My Assignments</string>
    <string name="event_history_tab">Events History</string>
    <string name="event_tab">View My Events</string>
    <string name="logout_tab">Log Out</string>

</resources>
