<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/list_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:text=""
            android:background="@drawable/border"
            android:id="@+id/listBackground9" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventImage2"
            android:src="@drawable/events_resize"
            android:contentDescription="@string/event_image_description"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:id="@+id/title2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/eventImage2"
            android:layout_alignLeft="@+id/listBackground9"
            android:layout_alignStart="@+id/listBackground9"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_title"
            android:id="@+id/date2"
            android:textSize="14sp"
            android:layout_below="@+id/title2"
            android:layout_alignLeft="@+id/listBackground9"
            android:layout_alignStart="@+id/listBackground9"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_title"
            android:id="@+id/location2"
            android:textSize="14sp"
            android:layout_below="@+id/date2"
            android:layout_alignLeft="@+id/listBackground9"
            android:layout_alignStart="@+id/listBackground9"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"/>

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="#6D9FC7"
            android:text="@string/view_details_btn"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/title2"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

    </RelativeLayout>
</LinearLayout>