<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_layout">

        <TextView
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:text=""
            android:background="@drawable/border"
            android:id="@+id/listBackground9"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:id="@+id/title2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingTop="5dp"
            android:layout_alignTop="@+id/listBackground9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_title"
            android:id="@+id/date2"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:layout_below="@+id/title2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_title"
            android:id="@+id/subject"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:layout_below="@+id/date2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textSize="9sp"
            android:background="#6D9FC7"
            android:text="@string/view_details_btn"
            android:textColor="@color/white"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="18dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/title2"/>

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textSize="9sp"
            android:background="@color/red"
            android:text="@string/delete_btn"
            android:textColor="@color/white"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="18dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/title2"/>

    </RelativeLayout>
</LinearLayout>