<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="#5066E5"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:paddingTop="40dp"
            android:textColor="@color/white"
            android:id="@+id/username"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:id="@+id/email" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:weightSum="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:padding="15dp"
            android:background="@drawable/border"
            android:id="@+id/viewAss"
            android:onClick="viewAss">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View My Assignments"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:padding="15dp"
            android:background="@drawable/border"
            android:id="@+id/viewEvent"
            android:onClick="viewEvent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View My Events"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:padding="15dp"
            android:background="@drawable/border"
            android:id="@+id/assHistory"
            android:onClick="assHistory">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Assignments History"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:padding="15dp"
            android:background="@drawable/border"
            android:id="@+id/eventHistory"
            android:onClick="eventHistory">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Events History"/>

        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="450dp"
            android:layout_height="60dp"
            android:text=""
            android:background="@color/darkBlue"
            android:id="@+id/toolbar"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browseButton"
            android:tint="@color/white"
            android:src="@drawable/ic_search_black_24dp"
            android:background="@null"
            android:contentDescription="@string/search_description"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_toRightOf="@+id/homeButton"
            android:layout_toEndOf="@+id/homeButton"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="5dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeButton"
            android:src="@drawable/ic_store_black_24dp"
            android:background="@null"
            android:tint="@color/white"
            android:contentDescription="@string/home_description"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignLeft="@+id/toolbar"
            android:layout_alignStart="@+id/toolbar"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:src="@drawable/ic_playlist_add_black_24dp"
            android:tint="@color/white"
            android:background="@null"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_toRightOf="@+id/browseButton"
            android:layout_toEndOf="@+id/browseButton"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/add_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/journalButton"
            android:src="@drawable/ic_book_black_24dp"
            android:tint="@color/white"
            android:background="@null"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/journal_description"/>
    </RelativeLayout>

</LinearLayout>